--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "format": "prettier --write . --ignore-path .gitignore",
-    "lint": "eslint . --ignore-path .gitignore --fix",
-    "fix": "npm run format && npm run lint",
+    "lint": "eslint . --ignore-path node_modules --fix",
+    "fix": "npm run lint",
     "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^9.0.2",
+    "@types/validator": "^13.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
