add products, phones and descriptions with seeds

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
+    "db-migrate": "sequelize-cli db:migrate",
+    "build": "npm run db-migrate tsc",
     "format": "prettier --write . --ignore-path .gitignore",
     "lint": "eslint . --ignore-path .gitignore --fix",
     "fix": "npm run lint",
@@ -38,6 +39,7 @@
     "husky": "^8.0.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2",
+    "sequelize-cli": "^6.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
